Translations by sabbamitta to translation/de/sabbamitta/sutta/kn/ud/vagga5/ud5.5_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/kn/ud/vagga5/ud5.5_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/ud/vagga5/ud5.5_translation-de-sabbamitta.json
@@ -13,7 +13,7 @@
   "ud5.5:3.3": "Herr, dass der Buddha doch bitte den Mönchen die Ordenssatzung aufsage.“ ",
   "ud5.5:3.4": "Doch zum zweiten Mal schwieg der Buddha. ",
   "ud5.5:4.1": "Zum dritten Mal erhob sich Ānanda von seinem Sitz, als die Nacht fortgeschritten war, während der letzten Nachtwache, als der Morgen graute und der Nacht Freude brachte, ordnete seine Robe über einer Schulter, erhob seine zusammengelegten Hände zum Buddha und sagte: ",
-  "ud5.5:4.2": "„Herr, die Nacht ist fortgeschritten. Es ist die letzte Nachtwache, die Morgendämmerung bricht herein und bringt der Nacht Freude. ",
+  "ud5.5:4.2": "„Herr, die Nacht ist fortgeschritten. Es ist die letzte Nachtwache, der Morgen graut und bringt der Nacht Freude. ",
   "ud5.5:4.3": "Herr, dass der Buddha doch bitte den Mönchen die Ordenssatzung aufsage.“ ",
   "ud5.5:4.4": "„Ānanda, die Versammlung ist nicht rein.“ ",
   "ud5.5:5.1": "Da dachte der Ehrwürdige Mahāmoggallāna: ",
