--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.132_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.132_translation-de-sabbamitta.json
@@ -22,5 +22,6 @@
   "sn35.132:4.4": "greifen Starke und Schwache an. ",
   "sn35.132:5.1": "Für jemanden, der die Tore der Sinne nicht bewacht, ist alles umsonst, ",
   "sn35.132:5.2": "wie der Reichtum, den jemand im Traum findet. ",
-  "sn35.132:5.3": "Fasten, auf blankem Boden schlafen, "
+  "sn35.132:5.3": "Fasten, auf blankem Boden schlafen, ",
+  "sn35.132:5.4": "beim Morgengrauen baden, die drei Veden, "
 }
