--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.132_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.132_translation-de-sabbamitta.json
@@ -25,5 +25,6 @@
   "sn35.132:5.3": "Fasten, auf blankem Boden schlafen, ",
   "sn35.132:5.4": "beim Morgengrauen baden, die drei Veden, ",
   "sn35.132:6.1": "ein raues Fell, Filzhaare und Schmutz, ",
-  "sn35.132:6.2": "Hymnen, Regeln und Gelübde sowie Selbstquälerei, "
+  "sn35.132:6.2": "Hymnen, Regeln und Gelübde sowie Selbstquälerei, ",
+  "sn35.132:6.3": "diese falschen krummen Stöcke, "
 }
