Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn35/sn35.132_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.132_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.132_translation-de-sabbamitta.json
@@ -27,5 +27,6 @@
   "sn35.132:6.1": "ein raues Fell, Filzhaare und Schmutz, ",
   "sn35.132:6.2": "Hymnen, Regeln und Gelübde sowie Selbstquälerei, ",
   "sn35.132:6.3": "diese falschen krummen Stöcke ",
-  "sn35.132:6.4": "und das Besprengen mit Wasser: "
+  "sn35.132:6.4": "und das Besprengen mit Wasser: ",
+  "sn35.132:6.5": "Diese Wahrzeichen der Brahmanen "
 }
