--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.132_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.132_translation-de-sabbamitta.json
@@ -29,5 +29,6 @@
   "sn35.132:6.3": "diese falschen krummen Stöcke ",
   "sn35.132:6.4": "und das Besprengen mit Wasser: ",
   "sn35.132:6.5": "Diese Wahrzeichen der Brahmanen ",
-  "sn35.132:6.6": "dienen nur dem Erlangen von Gewinn. "
+  "sn35.132:6.6": "dienen nur dem Erlangen von Gewinn. ",
+  "sn35.132:7.1": "Ein gesammelter Geist, "
 }
