Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn35/sn35.132_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.132_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.132_translation-de-sabbamitta.json
@@ -31,5 +31,6 @@
   "sn35.132:6.5": "Diese Wahrzeichen der Brahmanen ",
   "sn35.132:6.6": "dienen nur dem Erlangen von Gewinn. ",
   "sn35.132:7.1": "Ein gesammelter Geist, ",
-  "sn35.132:7.2": "klar und ungestört, "
+  "sn35.132:7.2": "klar und ungestört, ",
+  "sn35.132:7.3": "gütig zu allen Geschöpfen: "
 }
