--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.132_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.132_translation-de-sabbamitta.json
@@ -32,5 +32,6 @@
   "sn35.132:6.6": "dienen nur dem Erlangen von Gewinn. ",
   "sn35.132:7.1": "Ein gesammelter Geist, ",
   "sn35.132:7.2": "klar und ungestört, ",
-  "sn35.132:7.3": "gütig zu allen Geschöpfen: "
+  "sn35.132:7.3": "gütig zu allen Geschöpfen: ",
+  "sn35.132:7.4": "Das ist der Weg, um zu Brahmā zu gelangen!“ "
 }
