--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.132_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.132_translation-de-sabbamitta.json
@@ -26,7 +26,7 @@
   "sn35.132:5.4": "beim Morgengrauen baden, die drei Veden, ",
   "sn35.132:6.1": "ein raues Fell, Rastalocken und Schmutz, ",
   "sn35.132:6.2": "Hymnen, Regeln und Gelübde sowie Selbstquälerei, ",
-  "sn35.132:6.3": "diese falschen krummen Stöcke ",
+  "sn35.132:6.3": "diese falschen krummen Stäbe ",
   "sn35.132:6.4": "und das Besprengen mit Wasser: ",
   "sn35.132:6.5": "Diese Wahrzeichen der Brahmanen ",
   "sn35.132:6.6": "dienen nur dem Erlangen von Gewinn. ",
