--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.132_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.132_translation-de-sabbamitta.json
@@ -35,5 +35,6 @@
   "sn35.132:7.3": "gütig zu allen Geschöpfen: ",
   "sn35.132:7.4": "Das ist der Weg, um zu Brahmā zu gelangen!“ ",
   "sn35.132:8.1": "Da waren diese Brahmanenschüler zornig oder aufgebracht, gingen zum Brahmanen Lohicca und sagten zu ihm: ",
-  "sn35.132:8.2": "„Bitte, Meister, du sollst wissen, dass der Asket Mahākaccāna die Hymnen der Brahmanen geradeheraus verurteilt und ablehnt!“ "
+  "sn35.132:8.2": "„Bitte, Meister, du sollst wissen, dass der Asket Mahākaccāna die Hymnen der Brahmanen geradeheraus verurteilt und ablehnt!“ ",
+  "sn35.132:8.3": "Daraufhin war Lohicca zornig und aufgebracht. "
 }
