--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.132_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.132_translation-de-sabbamitta.json
@@ -36,5 +36,6 @@
   "sn35.132:7.4": "Das ist der Weg, um zu Brahmā zu gelangen!“ ",
   "sn35.132:8.1": "Da waren diese Brahmanenschüler zornig oder aufgebracht, gingen zum Brahmanen Lohicca und sagten zu ihm: ",
   "sn35.132:8.2": "„Bitte, Meister, du sollst wissen, dass der Asket Mahākaccāna die Hymnen der Brahmanen geradeheraus verurteilt und ablehnt!“ ",
-  "sn35.132:8.3": "Daraufhin war Lohicca zornig und aufgebracht. "
+  "sn35.132:8.3": "Daraufhin war Lohicca zornig und aufgebracht. ",
+  "sn35.132:8.4": "Dann dachte er: "
 }
