Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn35/sn35.132_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.132_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.132_translation-de-sabbamitta.json
@@ -38,5 +38,6 @@
   "sn35.132:8.2": "„Bitte, Meister, du sollst wissen, dass der Asket Mahākaccāna die Hymnen der Brahmanen geradeheraus verurteilt und ablehnt!“ ",
   "sn35.132:8.3": "Daraufhin war Lohicca zornig und aufgebracht. ",
   "sn35.132:8.4": "Dann dachte er: ",
-  "sn35.132:8.5": "„Aber es wäre nicht angebracht für mich, den Asketen Mahākaccāna zu beschimpfen und zu beleidigen, bloß auf der Grundlage von dem, was ich von diesen Schülern gehört habe. "
+  "sn35.132:8.5": "„Aber es wäre nicht angebracht für mich, den Asketen Mahākaccāna zu beschimpfen und zu beleidigen, bloß auf der Grundlage von dem, was ich von diesen Schülern gehört habe. ",
+  "sn35.132:8.6": "Warum gehe ich nicht zu ihm und befrage ihn?“ "
 }
