--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.132_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.132_translation-de-sabbamitta.json
@@ -39,5 +39,6 @@
   "sn35.132:8.3": "Daraufhin war Lohicca zornig und aufgebracht. ",
   "sn35.132:8.4": "Dann dachte er: ",
   "sn35.132:8.5": "„Aber es wäre nicht angebracht für mich, den Asketen Mahākaccāna zu beschimpfen und zu beleidigen, bloß auf der Grundlage von dem, was ich von diesen Schülern gehört habe. ",
-  "sn35.132:8.6": "Warum gehe ich nicht zu ihm und befrage ihn?“ "
+  "sn35.132:8.6": "Warum gehe ich nicht zu ihm und befrage ihn?“ ",
+  "sn35.132:9.1": "Da ging der Brahmane Lohicca zusammen mit jenen Brahmanenschülern zum Ehrwürdigen Mahākaccāna und tauschte Willkommensgrüße mit ihm aus. "
 }
