Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn35/sn35.132_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.132_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.132_translation-de-sabbamitta.json
@@ -42,5 +42,6 @@
   "sn35.132:8.6": "Warum gehe ich nicht zu ihm und befrage ihn?“ ",
   "sn35.132:9.1": "Da ging der Brahmane Lohicca zusammen mit jenen Brahmanenschülern zum Ehrwürdigen Mahākaccāna und tauschte Willkommensgrüße mit ihm aus. ",
   "sn35.132:9.2": "Nach der Begrüßung und dem Austausch von Höflichkeiten setzte er sich zur Seite hin und sagte zu ihm: ",
-  "sn35.132:9.3": "„Meister Kaccāna, sind einige junge Schüler von mir auf der Suche nach Feuerholz hier vorbeigekommen?“ "
+  "sn35.132:9.3": "„Meister Kaccāna, sind einige junge Schüler von mir auf der Suche nach Feuerholz hier vorbeigekommen?“ ",
+  "sn35.132:9.4": "„Das sind sie, Brahmane.“ "
 }
