--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.132_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.132_translation-de-sabbamitta.json
@@ -45,5 +45,6 @@
   "sn35.132:9.3": "„Meister Kaccāna, sind einige junge Schüler von mir auf der Suche nach Feuerholz hier vorbeigekommen?“ ",
   "sn35.132:9.4": "„Das sind sie, Brahmane.“ ",
   "sn35.132:9.5": "„Aber hattest du ein Gespräch mit ihnen?“ ",
-  "sn35.132:9.6": "„Das hatte ich.“ "
+  "sn35.132:9.6": "„Das hatte ich.“ ",
+  "sn35.132:9.7": "„Aber welche Art von Gespräch hattest du mit ihnen?“ "
 }
