Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn35/sn35.132_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.132_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.132_translation-de-sabbamitta.json
@@ -48,5 +48,5 @@
   "sn35.132:9.6": "„Das hatte ich.“ ",
   "sn35.132:9.7": "„Aber welche Art von Gespräch hattest du mit ihnen?“ ",
   "sn35.132:9.8": "„Dieses Gespräch hatte ich mit den Brahmanenschülern:  ",
-  "sn35.132:10.1": "(Mahākaccāna wiederholt die Strophen.) "
+  "sn35.132:10.1": "Die Brahmanen von einst setzten Sittlichkeit an die erste Stelle "
 }
