--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.132_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.132_translation-de-sabbamitta.json
@@ -50,5 +50,6 @@
   "sn35.132:9.8": "„Dieses Gespräch hatte ich mit den Brahmanenschülern:  ",
   "sn35.132:10.1": "Die Brahmanen von einst setzten Sittlichkeit an die erste Stelle ",
   "sn35.132:10.2": "und erinnerten sich an die alten Bräuche. ",
-  "sn35.132:10.3": "… "
+  "sn35.132:10.3": "… ",
+  "sn35.132:10.4": "gütig zu allen Geschöpfen: "
 }
