--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.132_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.132_translation-de-sabbamitta.json
@@ -51,5 +51,6 @@
   "sn35.132:10.1": "Die Brahmanen von einst setzten Sittlichkeit an die erste Stelle ",
   "sn35.132:10.2": "und erinnerten sich an die alten Bräuche. ",
   "sn35.132:10.3": "… ",
-  "sn35.132:10.4": "gütig zu allen Geschöpfen: "
+  "sn35.132:10.4": "gütig zu allen Geschöpfen: ",
+  "sn35.132:10.5": "Das ist der Weg, um zu Brahmā zu gelangen!“ "
 }
