Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn35/sn35.132_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.132_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.132_translation-de-sabbamitta.json
@@ -54,5 +54,6 @@
   "sn35.132:10.4": "gütig zu allen Geschöpfen: ",
   "sn35.132:10.5": "Das ist der Weg, um zu Brahmā zu gelangen!‘ ",
   "sn35.132:11.1": "Das ist das Gespräch, das ich mit den Brahmanenschülern hatte.“ ",
-  "sn35.132:12.1": "„Meister Kaccāna sprach von jemandem, der die Tore der Sinne nicht bewacht. "
+  "sn35.132:12.1": "„Meister Kaccāna sprach von jemandem, der die Tore der Sinne nicht bewacht. ",
+  "sn35.132:12.2": "Wie beschreibst du jemanden, der die Tore der Sinne nicht bewacht?“ "
 }
