Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn35/sn35.132_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.132_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.132_translation-de-sabbamitta.json
@@ -59,5 +59,6 @@
   "sn35.132:12.3": "„Brahmane, da sieht jemand mit dem Auge ein Bild. Wenn es angenehm ist, hält er daran fest, aber wenn es unangenehm ist, mag er es nicht. Seine Achtsamkeit auf den Körper ist nicht verankert und sein Herz ist eng. ",
   "sn35.132:12.4": "Und er versteht nicht wahrhaftig die Freiheit des Herzens und die Freiheit durch Weisheit, wo diese entstandenen schlechten, untauglichen Eigenschaften restlos aufhören. ",
   "sn35.132:12.5": "Da hört jemand mit dem Ohr einen Ton … ",
-  "sn35.132:12.6": "Da richt jemand mit der Nase einen Duft … "
+  "sn35.132:12.6": "Da richt jemand mit der Nase einen Duft … ",
+  "sn35.132:12.7": "Da schmeckt jemand mit der Zunge einen Geschmack … "
 }
