Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn35/sn35.132_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.132_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.132_translation-de-sabbamitta.json
@@ -61,5 +61,6 @@
   "sn35.132:12.5": "Da hört jemand mit dem Ohr einen Ton … ",
   "sn35.132:12.6": "Da richt jemand mit der Nase einen Duft … ",
   "sn35.132:12.7": "Da schmeckt jemand mit der Zunge einen Geschmack … ",
-  "sn35.132:12.8": "Da spürt jemand mit dem Körper eine Berührung … "
+  "sn35.132:12.8": "Da spürt jemand mit dem Körper eine Berührung … ",
+  "sn35.132:12.9": "Da erkennt jemand mit dem Geist einen Gedanken. Wenn er angenehm ist, hält er daran fest, aber wenn er unangenehm ist, mag er ihn nicht. Seine Achtsamkeit auf den Körper ist nicht verankert und sein Herz ist eng. "
 }
