--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.132_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.132_translation-de-sabbamitta.json
@@ -65,5 +65,6 @@
   "sn35.132:12.9": "Da erkennt jemand mit dem Geist einen Gedanken. Wenn er angenehm ist, hält er daran fest, aber wenn er unangenehm ist, mag er ihn nicht. Seine Achtsamkeit auf den Körper ist nicht verankert und sein Herz ist eng. ",
   "sn35.132:12.10": "Und er versteht nicht wahrhaftig die Freiheit des Herzens und die Freiheit durch Weisheit, wo diese entstandenen schlechten, untauglichen Eigenschaften restlos aufhören. ",
   "sn35.132:12.11": "So bewacht jemand die Tore der Sinne nicht.“ ",
-  "sn35.132:12.12": "„Es ist unglaublich, Meister Kaccāna, es ist erstaunlich! "
+  "sn35.132:12.12": "„Es ist unglaublich, Meister Kaccāna, es ist erstaunlich! ",
+  "sn35.132:12.13": "Wie genau du erklärt hast, wie jemand die Tore der Sinne nicht bewacht! "
 }
