--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.132_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.132_translation-de-sabbamitta.json
@@ -67,5 +67,6 @@
   "sn35.132:12.11": "So bewacht jemand die Tore der Sinne nicht.“ ",
   "sn35.132:12.12": "„Es ist unglaublich, Meister Kaccāna, es ist erstaunlich! ",
   "sn35.132:12.13": "Wie genau du erklärt hast, wie jemand die Tore der Sinne nicht bewacht! ",
-  "sn35.132:13.1": "Meister Kaccāna sprach auch von jemandem, der die Tore der Sinne bewacht. "
+  "sn35.132:13.1": "Meister Kaccāna sprach auch von jemandem, der die Tore der Sinne bewacht. ",
+  "sn35.132:13.2": "Wie beschreibst du jemanden, der die Tore der Sinne bewacht?“ "
 }
