Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn35/sn35.132_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.132_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.132_translation-de-sabbamitta.json
@@ -69,5 +69,6 @@
   "sn35.132:12.13": "Wie genau du erklärt hast, wie jemand die Tore der Sinne nicht bewacht! ",
   "sn35.132:13.1": "Meister Kaccāna sprach auch von jemandem, der die Tore der Sinne bewacht. ",
   "sn35.132:13.2": "Wie beschreibst du jemanden, der die Tore der Sinne bewacht?“ ",
-  "sn35.132:13.3": "„Brahmane, da sieht jemand mit dem Auge ein Bild. Wenn es angenehm ist, hält er nicht daran fest, und wenn es unangenehm ist, lehnt er es nicht ab. Seine Achtsamkeit auf den Körper ist verankert und sein Herz ist grenzenlos. "
+  "sn35.132:13.3": "„Brahmane, da sieht jemand mit dem Auge ein Bild. Wenn es angenehm ist, hält er nicht daran fest, und wenn es unangenehm ist, lehnt er es nicht ab. Seine Achtsamkeit auf den Körper ist verankert und sein Herz ist grenzenlos. ",
+  "sn35.132:13.4": "Und er versteht wahrhaftig die Freiheit des Herzens und die Freiheit durch Weisheit, wo diese entstandenen schlechten, untauglichen Eigenschaften restlos aufhören. "
 }
