Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn35/sn35.132_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.132_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.132_translation-de-sabbamitta.json
@@ -73,5 +73,6 @@
   "sn35.132:13.4": "Und er versteht wahrhaftig die Freiheit des Herzens und die Freiheit durch Weisheit, wo diese entstandenen schlechten, untauglichen Eigenschaften restlos aufhören. ",
   "sn35.132:13.5": "Da hört jemand mit dem Ohr einen Ton … ",
   "sn35.132:13.6": "Da richt jemand mit der Nase einen Duft … ",
-  "sn35.132:13.7": "Da schmeckt jemand mit der Zunge einen Geschmack … "
+  "sn35.132:13.7": "Da schmeckt jemand mit der Zunge einen Geschmack … ",
+  "sn35.132:13.8": "Da spürt jemand mit dem Körper eine Berührung … "
 }
