--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.132_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.132_translation-de-sabbamitta.json
@@ -79,5 +79,6 @@
   "sn35.132:13.10": "Und er versteht wahrhaftig die Freiheit des Herzens und die Freiheit durch Weisheit, wo diese entstandenen schlechten, untauglichen Eigenschaften restlos aufhören. ",
   "sn35.132:13.11": "So bewacht jemand die Tore der Sinne.“ ",
   "sn35.132:14.1": "„Es ist unglaublich, Meister Kaccāna, es ist erstaunlich! ",
-  "sn35.132:14.2": "Wie genau du erklärt hast, wie jemand die Tore der Sinne bewacht! "
+  "sn35.132:14.2": "Wie genau du erklärt hast, wie jemand die Tore der Sinne bewacht! ",
+  "sn35.132:14.3": "Vortrefflich, Meister Kaccāna! Vortrefflich! "
 }
