--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.132_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.132_translation-de-sabbamitta.json
@@ -80,5 +80,6 @@
   "sn35.132:13.11": "So bewacht jemand die Tore der Sinne.“ ",
   "sn35.132:14.1": "„Es ist unglaublich, Meister Kaccāna, es ist erstaunlich! ",
   "sn35.132:14.2": "Wie genau du erklärt hast, wie jemand die Tore der Sinne bewacht! ",
-  "sn35.132:14.3": "Vortrefflich, Meister Kaccāna! Vortrefflich! "
+  "sn35.132:14.3": "Vortrefflich, Meister Kaccāna! Vortrefflich! ",
+  "sn35.132:14.4": "Als würde er das Umgestürzte aufrichten oder das Verborgene enthüllen oder den Verirrten den Weg weisen oder im Dunkeln ein Licht anzünden, sodass Menschen mit guten Augen sehen könnten, was da ist, so hat Meister Kaccāna die Lehre auf vielerlei Weise klargemacht. "
 }
