--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.132_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.132_translation-de-sabbamitta.json
@@ -83,5 +83,6 @@
   "sn35.132:14.3": "Vortrefflich, Meister Kaccāna! Vortrefflich! ",
   "sn35.132:14.4": "Als würde er das Umgestürzte aufrichten oder das Verborgene enthüllen oder den Verirrten den Weg weisen oder im Dunkeln ein Licht anzünden, sodass Menschen mit guten Augen sehen könnten, was da ist, so hat Meister Kaccāna die Lehre auf vielerlei Weise klargemacht. ",
   "sn35.132:14.5": "Ich nehme Zuflucht zum Buddha, zur Lehre und zum Saṅgha der Mönche und Nonnen. ",
-  "sn35.132:14.6": "Von diesem Tag an soll Meister Kaccāna mich als Laienschüler in Erinnerung behalten, der für sein ganzes Leben Zuflucht genommen hat. "
+  "sn35.132:14.6": "Von diesem Tag an soll Meister Kaccāna mich als Laienschüler in Erinnerung behalten, der für sein ganzes Leben Zuflucht genommen hat. ",
+  "sn35.132:14.7": "Bitte komm zu meiner Familie, gerade so, wie du zu den Laienfamilien in Makkarakaṭa gehst. "
 }
