--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.132_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.132_translation-de-sabbamitta.json
@@ -72,7 +72,7 @@
   "sn35.132:13.3": "„Brahmane, da sieht jemand mit dem Auge ein Bild. Wenn es angenehm ist, hält er nicht daran fest, und wenn es unangenehm ist, lehnt er es nicht ab. Seine Achtsamkeit auf den Körper ist verankert und sein Herz ist grenzenlos. ",
   "sn35.132:13.4": "Und er versteht wahrhaftig die Freiheit des Herzens und die Freiheit durch Weisheit, wo diese entstandenen schlechten, untauglichen Eigenschaften restlos aufhören. ",
   "sn35.132:13.5": "Da hört jemand mit dem Ohr einen Ton … ",
-  "sn35.132:13.6": "Da richt jemand mit der Nase einen Duft … ",
+  "sn35.132:13.6": "Da riecht jemand mit der Nase einen Duft … ",
   "sn35.132:13.7": "Da schmeckt jemand mit der Zunge einen Geschmack … ",
   "sn35.132:13.8": "Da spürt jemand mit dem Körper eine Berührung … ",
   "sn35.132:13.9": "Da erkennt jemand mit dem Geist einen Gedanken. Wenn er angenehm ist, hält er nicht daran fest, und wenn er unangenehm ist, lehnt er ihn nicht ab. Seine Achtsamkeit auf den Körper ist verankert und sein Herz ist grenzenlos. ",
