Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn35/sn35.132_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.132_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.132_translation-de-sabbamitta.json
@@ -44,7 +44,7 @@
   "sn35.132:9.2": "Nach der Begrüßung und dem Austausch von Höflichkeiten setzte er sich zur Seite hin und sagte zu ihm: ",
   "sn35.132:9.3": "„Meister Kaccāna, sind einige junge Schüler von mir beim Feuerholzsammeln hier vorbeigekommen?“ ",
   "sn35.132:9.4": "„Das sind sie, Brahmane.“ ",
-  "sn35.132:9.5": "„Aber hattest du ein Gespräch mit ihnen?“ ",
+  "sn35.132:9.5": "„Aber hattest du eine Unterhaltung mit ihnen?“ ",
   "sn35.132:9.6": "„Das hatte ich.“ ",
   "sn35.132:9.7": "„Aber welche Art von Gespräch hattest du mit ihnen?“ ",
   "sn35.132:9.8": "„Dieses Gespräch hatte ich mit den Brahmanenschülern: ",
