--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.132_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.132_translation-de-sabbamitta.json
@@ -46,7 +46,7 @@
   "sn35.132:9.4": "„Das sind sie, Brahmane.“ ",
   "sn35.132:9.5": "„Aber hattest du eine Unterhaltung mit ihnen?“ ",
   "sn35.132:9.6": "„Das hatte ich.“ ",
-  "sn35.132:9.7": "„Aber welche Art von Gespräch hattest du mit ihnen?“ ",
+  "sn35.132:9.7": "„Aber welche Art von Unterhaltung hattest du mit ihnen?“ ",
   "sn35.132:9.8": "„Dieses Gespräch hatte ich mit den Brahmanenschülern: ",
   "sn35.132:10.1": "‚Die Brahmanen von einst setzten Sittlichkeit an die erste Stelle ",
   "sn35.132:10.2": "und erinnerten sich an die alten Bräuche. ",
