Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -155,9 +155,9 @@
   "pli-tv-kd11:5.1.1": "“A monk who’s had a legal procedure of condemnation done against himself should conduct himself properly. ",
   "pli-tv-kd11:5.1.2": "This is the proper conduct: ",
   "pli-tv-kd11:5.1.3": "He shouldn’t give the full ordination. ",
-  "pli-tv-kd11:5.1.4": "He should not give formal support. ",
-  "pli-tv-kd11:5.1.5": "He should not have a novice monk attend on him. ",
-  "pli-tv-kd11:5.1.6": "He should not accept being appointed as an instructor of the nuns. ",
+  "pli-tv-kd11:5.1.4": "He shouldn’t give formal support. ",
+  "pli-tv-kd11:5.1.5": "He shouldn’t have a novice monk attend on him. ",
+  "pli-tv-kd11:5.1.6": "He shouldn’t accept being appointed as an instructor of the nuns. ",
   "pli-tv-kd11:5.1.7": "Even if appointed, he should not instruct the nuns. ",
   "pli-tv-kd11:5.1.8": "He should not commit the same offense as the offense for which the Sangha did the procedure of condemnation against him. ",
   "pli-tv-kd11:5.1.9": "He should not commit an offense similar to the offense for which the Sangha did the procedure of condemnation against him. ",
