--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -158,8 +158,8 @@
   "pli-tv-kd11:5.1.4": "He shouldn’t give formal support. ",
   "pli-tv-kd11:5.1.5": "He shouldn’t have a novice monk attend on him. ",
   "pli-tv-kd11:5.1.6": "He shouldn’t accept being appointed as an instructor of the nuns. ",
-  "pli-tv-kd11:5.1.7": "Even if appointed, he should not instruct the nuns. ",
-  "pli-tv-kd11:5.1.8": "He should not commit the same offense as the offense for which the Sangha did the procedure of condemnation against him. ",
+  "pli-tv-kd11:5.1.7": "Even if appointed, he shouldn’t instruct the nuns. ",
+  "pli-tv-kd11:5.1.8": "He shouldn’t commit the same offense as the offense for which the Sangha did the procedure of condemnation against him. ",
   "pli-tv-kd11:5.1.9": "He should not commit an offense similar to the offense for which the Sangha did the procedure of condemnation against him. ",
   "pli-tv-kd11:5.1.10": "He should not commit an offense worse than the offense for which the Sangha did the procedure of condemnation against him. ",
   "pli-tv-kd11:5.1.11": "He should not criticize the procedure. ",
