--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -160,10 +160,10 @@
   "pli-tv-kd11:5.1.6": "He shouldn’t accept being appointed as an instructor of the nuns. ",
   "pli-tv-kd11:5.1.7": "Even if appointed, he shouldn’t instruct the nuns. ",
   "pli-tv-kd11:5.1.8": "He shouldn’t commit the same offense as the offense for which the Sangha did the procedure of condemnation against him. ",
-  "pli-tv-kd11:5.1.9": "He should not commit an offense similar to the offense for which the Sangha did the procedure of condemnation against him. ",
-  "pli-tv-kd11:5.1.10": "He should not commit an offense worse than the offense for which the Sangha did the procedure of condemnation against him. ",
-  "pli-tv-kd11:5.1.11": "He should not criticize the procedure. ",
-  "pli-tv-kd11:5.1.12": "He should not criticize those who did the procedure. ",
+  "pli-tv-kd11:5.1.9": "He shouldn’t commit an offense similar to the offense for which the Sangha did the procedure of condemnation against him. ",
+  "pli-tv-kd11:5.1.10": "He shouldn’t commit an offense worse than the offense for which the Sangha did the procedure of condemnation against him. ",
+  "pli-tv-kd11:5.1.11": "He shouldn’t criticize the procedure. ",
+  "pli-tv-kd11:5.1.12": "He shouldn’t criticize those who did the procedure. ",
   "pli-tv-kd11:5.1.13": "He should not cancel the observance-day ceremony of a regular monk. ",
   "pli-tv-kd11:5.1.14": "He should not cancel the invitation ceremony of a regular monk. ",
   "pli-tv-kd11:5.1.15": "He should not speak to a regular monk to initiate a legal process against him. ",
