Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -164,9 +164,9 @@
   "pli-tv-kd11:5.1.10": "He shouldn’t commit an offense worse than the offense for which the Sangha did the procedure of condemnation against him. ",
   "pli-tv-kd11:5.1.11": "He shouldn’t criticize the procedure. ",
   "pli-tv-kd11:5.1.12": "He shouldn’t criticize those who did the procedure. ",
-  "pli-tv-kd11:5.1.13": "He should not cancel the observance-day ceremony of a regular monk. ",
-  "pli-tv-kd11:5.1.14": "He should not cancel the invitation ceremony of a regular monk. ",
-  "pli-tv-kd11:5.1.15": "He should not speak to a regular monk to initiate a legal process against him. ",
+  "pli-tv-kd11:5.1.13": "He shouldn’t cancel the observance-day ceremony of a regular monk. ",
+  "pli-tv-kd11:5.1.14": "He shouldn’t cancel the invitation ceremony of a regular monk. ",
+  "pli-tv-kd11:5.1.15": "He shouldn’t order a regular monk in regard to an offense. ",
   "pli-tv-kd11:5.1.16": "He should not make accusations against a regular monk. ",
   "pli-tv-kd11:5.1.17": "He should not get permission from a regular monk to correct him. ",
   "pli-tv-kd11:5.1.18": "He should not accuse a regular monk of an offense. ",
