Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -167,8 +167,8 @@
   "pli-tv-kd11:5.1.13": "He shouldn’t cancel the observance-day ceremony of a regular monk. ",
   "pli-tv-kd11:5.1.14": "He shouldn’t cancel the invitation ceremony of a regular monk. ",
   "pli-tv-kd11:5.1.15": "He shouldn’t order a regular monk in regard to an offense. ",
-  "pli-tv-kd11:5.1.16": "He should not make accusations against a regular monk. ",
-  "pli-tv-kd11:5.1.17": "He should not get permission from a regular monk to correct him. ",
+  "pli-tv-kd11:5.1.16": "He shouldn’t give instructions to a regular monk from a position of authority. ",
+  "pli-tv-kd11:5.1.17": "He shouldn’t get permission from a regular monk to correct him. ",
   "pli-tv-kd11:5.1.18": "He should not accuse a regular monk of an offense. ",
   "pli-tv-kd11:5.1.19": "He should not remind a regular monk of an offense. ",
   "pli-tv-kd11:5.1.20": "He should not associate inappropriately with other monks.” ",
