Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -169,9 +169,9 @@
   "pli-tv-kd11:5.1.15": "He shouldn’t order a regular monk in regard to an offense. ",
   "pli-tv-kd11:5.1.16": "He shouldn’t give instructions to a regular monk from a position of authority. ",
   "pli-tv-kd11:5.1.17": "He shouldn’t get permission from a regular monk to correct him. ",
-  "pli-tv-kd11:5.1.18": "He should not accuse a regular monk of an offense. ",
-  "pli-tv-kd11:5.1.19": "He should not remind a regular monk of an offense. ",
-  "pli-tv-kd11:5.1.20": "He should not associate inappropriately with other monks.” ",
+  "pli-tv-kd11:5.1.18": "He shouldn’t accuse a regular monk of an offense. ",
+  "pli-tv-kd11:5.1.19": "He shouldn’t remind a regular monk of an offense. ",
+  "pli-tv-kd11:5.1.20": "He shouldn’t associate inappropriately with other monks.” ",
   "pli-tv-kd11:5.1.21": "The eighteen kinds of conduct in regard to the legal procedure of condemnation are finished. ",
   "pli-tv-kd11:6.1.0": "1.5 The group of eighteen on not to be lifted ",
   "pli-tv-kd11:6.1.1": "When the Sangha had done a legal procedure of condemnation against the monks Paṇḍuka and Lohitaka, ",
