Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -177,10 +177,10 @@
   "pli-tv-kd11:6.1.1": "When the Sangha had done a legal procedure of condemnation against the monks Paṇḍuka and Lohitaka, ",
   "pli-tv-kd11:6.1.2": "they conducted themselves properly and suitably so as to deserve to be released. They then went to the monks ",
   "pli-tv-kd11:6.1.3": "and told them about this, adding, “What should we do now?” ",
-  "pli-tv-kd11:6.1.4": "The monks told the Buddha. ",
-  "pli-tv-kd11:6.1.5": "He had the monks gathered and said, ",
+  "pli-tv-kd11:6.1.4": "The monks told the Buddha … ",
+  "pli-tv-kd11:6.1.5": "",
   "pli-tv-kd11:6.1.6": "“Well then, lift that legal procedure of condemnation against the monks Paṇḍuka and Lohitaka. ",
-  "pli-tv-kd11:6.2.1": "When a monk has five qualities, a legal procedure of condemnation against him should not be lifted: ",
+  "pli-tv-kd11:6.2.1": "When a monk has five qualities, a legal procedure of condemnation against him shouldn’t be lifted: ",
   "pli-tv-kd11:6.2.2": "he gives the full ordination; he gives formal support; he has a novice monk attend on him; he accepts being appointed as an instructor of the nuns; he instructs the nuns, whether appointed or not. ",
   "pli-tv-kd11:6.2.4": "When a monk has another five qualities, a procedure of condemnation against him should not be lifted: ",
   "pli-tv-kd11:6.2.5": "he commits the same offense for which the Sangha did the procedure of condemnation against him; he commits an offense similar to the one for which the Sangha did the procedure of condemnation against him; he commits an offense worse than the one for which the Sangha did the procedure of condemnation against him; ",
