--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -204,13 +204,13 @@
   "pli-tv-kd11:8.1.5": "and a third time. ",
   "pli-tv-kd11:8.1.6": "A competent and capable monk should then inform the Sangha: ",
   "pli-tv-kd11:8.2.1": "‘Please, Venerables, I ask the Sangha to listen. ",
-  "pli-tv-kd11:8.2.2": "The Sangha has done a legal procedure of condemnation against these monks Paṇḍuka and Lohitaka. They have conducted themselves properly and suitably so as to deserve to be released, and now ask for the legal procedure of condemnation to be lifted. ",
+  "pli-tv-kd11:8.2.2": "The Sangha has done a legal procedure of condemnation against these monks Paṇḍuka and Lohitaka. They have conducted themselves properly and suitably so as to deserve to be released, and now ask for that legal procedure to be lifted. ",
   "pli-tv-kd11:8.2.3": "If it seems appropriate to the Sangha, the Sangha should lift the legal procedure of condemnation against the monks Paṇḍuka and Lohitaka. ",
   "pli-tv-kd11:8.2.4": "This is the motion. ",
   "pli-tv-kd11:8.2.5": "Please, Venerables, I ask the Sangha to listen. ",
-  "pli-tv-kd11:8.2.6": "The Sangha has done a legal procedure of condemnation against these monks Paṇḍuka and Lohitaka. They have conducted themselves properly and suitably so as to deserve to be released, and now ask for the legal procedure of condemnation to be lifted. ",
+  "pli-tv-kd11:8.2.6": "The Sangha has done a legal procedure of condemnation against these monks Paṇḍuka and Lohitaka. They have conducted themselves properly and suitably so as to deserve to be released, and now ask for that legal procedure to be lifted. ",
   "pli-tv-kd11:8.2.7": "The Sangha lifts the legal procedure of condemnation against the monks Paṇḍuka and Lohitaka. ",
-  "pli-tv-kd11:8.2.8": "Any monk who approves of lifting the legal procedure of condemnation against the monks Paṇḍuka and Lohitaka should remain silent. ",
+  "pli-tv-kd11:8.2.8": "Any monk who approves of lifting that legal procedure against the monks Paṇḍuka and Lohitaka should remain silent. ",
   "pli-tv-kd11:8.2.9": "Any monk who doesn’t approve should speak up. ",
   "pli-tv-kd11:8.2.10": "For the second time I speak on this matter. ",
   "pli-tv-kd11:8.2.11": "Please, Venerables, I ask the Sangha to listen. ",
