Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -241,7 +241,7 @@
   "pli-tv-kd11:9.1.15": "“It’s not suitable for that foolish man, it’s not proper, it’s not worthy of a monastic, it’s not allowable, it’s not to be done. ",
   "pli-tv-kd11:9.1.16": "How can he be ignorant and incompetent, often committing offenses, and lacking in boundaries? ",
   "pli-tv-kd11:9.1.17": "How can he constantly and improperly socialize with householders? ",
-  "pli-tv-kd11:9.1.18": "Moreover, how can it be that the monks regularly give him probation, send him back to the beginning, give him trial periods, and rehabilitate him? ",
+  "pli-tv-kd11:9.1.18": "And how can it be that the monks regularly give him probation, send him back to the beginning, give him trial periods, and rehabilitate him? ",
   "pli-tv-kd11:9.1.19": "This will affect people’s confidence …” ",
   "pli-tv-kd11:9.1.20": "After rebuking him … ",
   "pli-tv-kd11:9.1.21": "the Buddha gave a teaching and addressed the monks: ",
