Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -314,9 +314,9 @@
   "pli-tv-kd11:10.1.45": "it’s done after having accused the person of their offense, it’s done after having reminded the person of their offense, it’s done after having charged the person with their offense. ",
   "pli-tv-kd11:10.1.47": "“When a procedure of demotion has another three qualities, it’s also legitimate, in accordance with the Monastic Law, and properly disposed of: ",
   "pli-tv-kd11:10.1.48": "it’s done in the presence of the accused, it’s done legitimately, it’s done by a unanimous assembly. ",
-  "pli-tv-kd11:10.1.50": "When a procedure of demotion has another three qualities, it is also legitimate, in accordance with the Monastic Law, and properly disposed of: ",
+  "pli-tv-kd11:10.1.50": "When a procedure of demotion has another three qualities, it’s also legitimate, in accordance with the Monastic Law, and properly disposed of: ",
   "pli-tv-kd11:10.1.51": "it’s done with the questioning of the accused, it’s done legitimately, it’s done by a unanimous assembly. ",
-  "pli-tv-kd11:10.1.53": "When a procedure of demotion has another three qualities, it is also legitimate, in accordance with the Monastic Law, and properly disposed of: ",
+  "pli-tv-kd11:10.1.53": "When a procedure of demotion has another three qualities, it’s also legitimate, in accordance with the Monastic Law, and properly disposed of: ",
   "pli-tv-kd11:10.1.54": "it’s done with the admission of the accused, it’s done legitimately, it’s done by a unanimous assembly. ",
   "pli-tv-kd11:10.1.56": "“When a procedure of demotion has another three qualities, it is also legitimate, in accordance with the Monastic Law, and properly disposed of: ",
   "pli-tv-kd11:10.1.57": "it’s done against one who’s committed an offense, it’s done legitimately, it’s done by a unanimous assembly. ",
