Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -326,9 +326,9 @@
   "pli-tv-kd11:10.1.63": "it’s done against one who hasn’t confessed their offense, it’s done legitimately, it’s done by a unanimous assembly. ",
   "pli-tv-kd11:10.1.65": "“When a procedure of demotion has another three qualities, it’s also legitimate, in accordance with the Monastic Law, and properly disposed of: ",
   "pli-tv-kd11:10.1.66": "it’s done after accusing the person of their offense, it’s done legitimately, it’s done by a unanimous assembly. ",
-  "pli-tv-kd11:10.1.68": "When a procedure of demotion has another three qualities, it is also legitimate, in accordance with the Monastic Law, and properly disposed of: ",
+  "pli-tv-kd11:10.1.68": "When a procedure of demotion has another three qualities, it’s also legitimate, in accordance with the Monastic Law, and properly disposed of: ",
   "pli-tv-kd11:10.1.69": "it’s done after reminding the person of their offense, it’s done legitimately, it’s done by a unanimous assembly. ",
-  "pli-tv-kd11:10.1.71": "When a procedure of demotion has another three qualities, it is also legitimate, in accordance with the Monastic Law, and properly disposed of: ",
+  "pli-tv-kd11:10.1.71": "When a procedure of demotion has another three qualities, it’s also legitimate, in accordance with the Monastic Law, and properly disposed of: ",
   "pli-tv-kd11:10.1.72": "it’s done after charging the person with their offense, it’s done legitimately, it’s done by a unanimous assembly.” ",
   "pli-tv-kd11:10.1.74": "The group of twelve on legitimate legal procedures is finished. ",
   "pli-tv-kd11:10.1.75.0": "2.3 The group of six on wishing ",
