Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -361,9 +361,9 @@
   "pli-tv-kd11:10.1.106": "He shouldn’t commit an offense similar to the offense for which the Sangha did the procedure of demotion against him. ",
   "pli-tv-kd11:10.1.107": "He shouldn’t commit an offense worse than the offense for which the Sangha did the procedure of demotion against him. ",
   "pli-tv-kd11:10.1.108": "He shouldn’t criticize the procedure. ",
-  "pli-tv-kd11:10.1.109": "He should not criticize those who did the procedure. ",
-  "pli-tv-kd11:10.1.110": "He should not cancel the observance-day ceremony of a regular monk. ",
-  "pli-tv-kd11:10.1.111": "He should not cancel the invitation ceremony of a regular monk. ",
+  "pli-tv-kd11:10.1.109": "He shouldn’t criticize those who did the procedure. ",
+  "pli-tv-kd11:10.1.110": "He shouldn’t cancel the observance-day ceremony of a regular monk. ",
+  "pli-tv-kd11:10.1.111": "He shouldn’t cancel the invitation ceremony of a regular monk. ",
   "pli-tv-kd11:10.1.112": "He should not speak to a regular monk to initiate a legal process against him. ",
   "pli-tv-kd11:10.1.113": "He should not make accusations against a regular monk. ",
   "pli-tv-kd11:10.1.114": "He should not get permission from a regular monk to correct him. ",
