Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -368,8 +368,8 @@
   "pli-tv-kd11:10.1.113": "He shouldn’t give instructions to a regular monk from a position of authority. ",
   "pli-tv-kd11:10.1.114": "He shouldn’t get permission from a regular monk to correct him. ",
   "pli-tv-kd11:10.1.115": "He shouldn’t accuse a regular monk of an offense. ",
-  "pli-tv-kd11:10.1.116": "He should not remind a regular monk of an offense. ",
-  "pli-tv-kd11:10.1.117": "He should not associate inappropriately with other monks.” ",
+  "pli-tv-kd11:10.1.116": "He shouldn’t remind a regular monk of an offense. ",
+  "pli-tv-kd11:10.1.117": "He shouldn’t associate inappropriately with other monks.” ",
   "pli-tv-kd11:10.1.118": "The eighteen kinds of conduct in regard to the legal procedure of demotion are finished. ",
   "pli-tv-kd11:11.1.1": "Soon the Sangha did a legal procedure of demotion against the monk Seyyasaka, ",
   "pli-tv-kd11:11.1.2": "instructing him to live with formal support. ",
