Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -604,7 +604,7 @@
   "pli-tv-kd11:15.1.11": "He shouldn’t criticize the procedure. ",
   "pli-tv-kd11:15.1.12": "He shouldn’t criticize those who did the procedure. ",
   "pli-tv-kd11:15.1.13": "He shouldn’t cancel the observance-day ceremony of a regular monk. ",
-  "pli-tv-kd11:15.1.14": "He should not cancel the invitation ceremony of a regular monk. ",
+  "pli-tv-kd11:15.1.14": "He shouldn’t cancel the invitation ceremony of a regular monk. ",
   "pli-tv-kd11:15.1.15": "He should not speak to a regular monk to initiate a legal process against him. ",
   "pli-tv-kd11:15.1.16": "He should not make accusations against a regular monk. ",
   "pli-tv-kd11:15.1.17": "He should not get permission from a regular monk to correct him. ",
