Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -609,8 +609,8 @@
   "pli-tv-kd11:15.1.16": "He shouldn’t give instructions to a regular monk from a position of authority. ",
   "pli-tv-kd11:15.1.17": "He shouldn’t get permission from a regular monk to correct him. ",
   "pli-tv-kd11:15.1.18": "He shouldn’t accuse a regular monk of an offense. ",
-  "pli-tv-kd11:15.1.19": "He should not remind a regular monk of an offense. ",
-  "pli-tv-kd11:15.1.20": "He should not associate inappropriately with other monks.” ",
+  "pli-tv-kd11:15.1.19": "He shouldn’t remind a regular monk of an offense. ",
+  "pli-tv-kd11:15.1.20": "He shouldn’t associate inappropriately with other monks.” ",
   "pli-tv-kd11:15.1.21": "The eighteen kinds of conduct in regard to the legal procedure of banishment are finished. ",
   "pli-tv-kd11:16.1.1": "Soon afterwards a sangha of monks, headed by Sāriputta and Moggallāna, went to Kīṭāgiri and did the legal procedure of banishing the monks Assaji and Punabbasuka, ",
   "pli-tv-kd11:16.1.2": "prohibiting them from staying at Kīṭāgiri. ",
